--- a/reto/cinema.html
+++ b/reto/cinema.html
@@ -4,42 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <title>Cine Colombia</title>
 </head>
 <body>
-    <div class="barra">
-        <header>
-            <nav class="navegador">
-                <div class="logo">
-                    <img src="img/casi.png">
-                    <nav class="navegacion">
-                        <div class="buscar">
-                            <form action="/browse" method="GET">
-                                <input type="text" name="q" id="" autocomplete="off" placeholder="Buscar..">
-                            </form>
-                        </div>
-                        <ul class="menu">
-                            <li>
-                                <a href="#" class="activo">Inicio</a>
-                            </li>
-                            <li>
-                                <a href="#">Peliculas</a>
-                            </li>
-                            <li>
-                                <a href="#">Funciones</a>
-                            </li>
-                            <li>
-                                <a href="#">Mi Cuenta</a>
-                            </li>
-                        </ul>                
-                    </nav>
-                </div>
-            </nav>
-        </header>
         <div class="cuerpo">
             <h1 class="cartelera">CARTELERA</h1>
             <div class="contenedor">
@@ -141,6 +112,5 @@
                 </div>
             </div>  
         </div> 
-    </div>
 </body>
 </html>
